@@ -63,6 +63,9 @@ Current Version (SVN trunk, 6.1-dev, future 6.2):
 - Improve rangeset item checking so that Bands=1,2,3 is supported with WCS 1.0
   (#3919).
 
+- Fix GetMapserverUnitUsingProj() for proj=latlong (#3883)
+
+
 Version 6.0.0 (2011-05-11)
 --------------------------
 
